Fix malformed form class

--- a/client/index.html
+++ b/client/index.html
@@ -546,7 +546,7 @@
                         </div>
                       ))}
                     </div>
-                    <form onSubmit={handleChatSubmit} className=" estejam flex">
+                    <form onSubmit={handleChatSubmit} className="flex">
                       <input
                         type="text"
                         value={chatInput}
